@@ -24,6 +24,13 @@ Prado::using('System.Web.UI.WebControls.TListControl');
  * The property {@link setRows Rows} specifies how many rows of options are visible
  * at a time. See {@link TListControl} for inherited properties.
  *
+ * Since v3.0.3, TListBox starts to support optgroup. To specify an option group for
+ * a list item, set a Group attribute with it,
+ * <code>
+ *  $listitem->Attributes->Group="Group Name";
+ *  // or <com:TListItem Attributes.Group="Group Name" .../> in template
+ * </code>
+ *
  * @author Qiang Xue <qiang.xue@gmail.com>
  * @version $Revision: $  $Date: $
  * @package System.Web.UI.WebControls
